@@ -1,8 +1,4 @@
-DIST openca-tools-1.0.0.tar.gz 376687 RMD160 6bc7042375a8a44c016df2c805cffd06bf6ad467 SHA1 9165d80ad5e1cefe581e6321f9271f79ff3dc0fa SHA256 5239b7959014b3bc5774ad6efbd03f3f847d3b7d28952fe01b3221f5d92fd430
-DIST openca-tools-1.1.0.tar.gz 397801 RMD160 388901de18d1644514497c94a0092dfceb096d84 SHA1 be07237d48d1dbc8e66a1212a1fb578a87293a37 SHA256 9a86152498552543810f82c6c96e93b91318f73beed95b71f01343299876081c
 DIST openca-tools-1.3.0.tar.gz 382024 RMD160 04b6dc703a717edd1a3e422b0f5c90d06e425541 SHA1 7a36db2d9fd642627f785a116043bd3801ef971e SHA256 d3f82616d2341faf2fcd41c57f8b42fd59b30d21b9cb5b65875a2718db6e94f7
-EBUILD openca-tools-1.0.0.ebuild 874 RMD160 a56150c4bf53d3c7ed80baa5f4b2a720a79146e6 SHA1 6393a5606533d6de72c32f53dc412d868fce21c3 SHA256 75baa5046b4474aaafeec605e768f49fa3604bd48993cd9b2e02b8a6ee612975
-EBUILD openca-tools-1.1.0.ebuild 874 RMD160 a56150c4bf53d3c7ed80baa5f4b2a720a79146e6 SHA1 6393a5606533d6de72c32f53dc412d868fce21c3 SHA256 75baa5046b4474aaafeec605e768f49fa3604bd48993cd9b2e02b8a6ee612975
 EBUILD openca-tools-1.3.0.ebuild 960 RMD160 39df623679447bb739c8c0c1f4c424d4408471cc SHA1 dd25e7dce0aa02fec453072773ccbfa586136fe4 SHA256 111ded37428a9e1850c56836bb2954d3d22a536f838559bf3b549c2f84be22a6
-MISC ChangeLog 844 RMD160 f6472a09dd6c6e9951e10867d4f83defa3bad527 SHA1 1a47e8062510b9c170e1384d8975aa8b7f148679 SHA256 89298c883fb4b5be20d3ac62bf6c88dd36704777a2f19ab37f8ad3a9e0212d96
+MISC ChangeLog 969 RMD160 178a367ec24ccc5c35309efe144deae661543536 SHA1 3f1a8c3ad9b548c3523f76f7f205f010896de554 SHA256 caeabb5a8a5cd62d9191ff3aa55dc7b51096eaaa53334a45cc7c86b9a1720316
 MISC metadata.xml 343 RMD160 24d871867f98a7775379f55cb81ef563dc6cbae9 SHA1 f260ae5c95602ca258ee2804b43a99a824979c39 SHA256 b20ec7ecb2e4ad1f1467aa011c5ace6d09c7b8f57c4d25a41dff8e49b24de44f
