@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  -openca-tools-1.0.0.ebuild, -openca-tools-1.1.0.ebuild:
+  remove old
+
 *openca-tools-1.3.0 ( 31 Mar 2010 )
 
   31 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
